openshift/buildconfig-gogs.yml
---
kind: DeploymentConfig
apiVersion: v1
metadata:
  name: gogs
spec:
  trigger:
    - type: ImageChange
      from:
        kind: ImageStreamTag
        name: gogs:latest
    - type: ConfigChange
  replicas: 1
  selector:
    app: gogs
  template:
    metadata:
      name: gogs
      labels:
        app: gogs
    spec:
      containers:
        - name: gogs
          image: gogs
      restartPolicy: Always
