openshift/imagestream-dc-ex.yml
---
kind: "DeploymentConfig"
apiVersion: "apps.openshift.io/v1"
metadata:
  name: "my-nginx"
spec:
  template:
    metadata:
      labels:
        name: "my-nginx"
    spec:
      containers:
        - name: "my-nginx"
          ports:
            - containerPort: 8080
              protocol: "TCP"
          readinessProbe:
            httpGet:
              port: 8080
          livenessProbe:
            httpGet:
              port: 8080
          resources:
            requests:
              cpu: 100m
              memory: 10Mi
              # ephemeral-storage: 1Gi
            limits:
              cpu: 200m
              memory: 100Mi
              # ephemeral-storage: 2Gi
  replicas: 1
  triggers:
    - type: "ConfigChange"
    - type: "ImageChange"
      imageChangeParams:
        automatic: true
        from:
          kind: "ImageStreamTag"
          name: "my-nginx:latest"
        containerNames:
          - "my-nginx"
  strategy:
    type: "Rolling"
  paused: false
  revisionHistoryLimit: 2
  minReadySeconds: 0
---
kind: Service
apiVersion: v1
metadata:
  name: my-nginx
spec:
  selector:
    name: my-nginx
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: 8080
---
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: my-nginx
spec:
  host: my-nginx.oc311.310.local
  to:
    kind: Service
    name: my-nginx
  port:
    targetPort: http
